set(OCTAVEMATLAB_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR})

if(OPT_MATLAB)
  add_subdirectory(matlab)
  set(CPACK_COMPONENT_OPENRAVE-MATLAB_DEPENDS ${CPACK_COMPONENT_OPENRAVE-MATLAB_DEPENDS} PARENT_SCOPE)
  set(CPACK_COMPONENT_OPENRAVE-MATLAB_DESCRIPTION ${CPACK_COMPONENT_OPENRAVE-MATLAB_DESCRIPTION} PARENT_SCOPE)
  set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} PARENT_SCOPE)
endif()

if(OPT_OCTAVE)
  add_subdirectory(octave)
  set(CPACK_COMPONENT_OPENRAVE-OCTAVE_DEPENDS ${CPACK_COMPONENT_OPENRAVE-OCTAVE_DEPENDS} PARENT_SCOPE)
  set(CPACK_COMPONENT_OPENRAVE-OCTAVE_DESCRIPTION ${CPACK_COMPONENT_OPENRAVE-OCTAVE_DESCRIPTION} PARENT_SCOPE)
  set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} PARENT_SCOPE)
endif()
