include_directories("${OPENRAVE_INCLUDE_DIRS}") # needed since plugins include openrave/openrave.h
set(PLUGIN_LINK_FLAGS "")

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(PLUGIN_COMPILE_FLAGS "-DOPENRAVE_DLL ${Boost_CFLAGS} -fPIC")
else()
  set(PLUGIN_COMPILE_FLAGS "-DOPENRAVE_DLL ${Boost_CFLAGS}")
endif()

set(PLUGINS_BASE ${COMPONENT_PREFIX}plugins-base)
string(TOUPPER ${PLUGINS_BASE} PLUGINS_BASE_UPPER)
set(CPACK_COMPONENT_${PLUGINS_BASE_UPPER}_GROUP "Plugins" PARENT_SCOPE)
set(CPACK_COMPONENT_${PLUGINS_BASE_UPPER}_DESCRIPTION "Offer a solid infrastructure of basic planning functionality." PARENT_SCOPE)
#set(CPACK_COMPONENT_${PLUGINS_BASE_UPPER}_DEPENDS ${COMPONENT_PREFIX}base libboost-regex${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION} PARENT_SCOPE)
set(PLUGIN_COMPONENTS ${PLUGINS_BASE})

set(PLUGINS basecontrollers baserobots basesensors bulletrave dualmanipulation grasper ikfastsolvers logging oderave pqprave qtcoinrave rmanipulation rplanners textserver)
foreach(PLUGIN ${PLUGINS})
  set(PLUGIN_COMPONENT)
  add_subdirectory(${PLUGIN})
  if( PLUGIN_COMPONENT )
    set(PLUGIN_COMPONENTS ${PLUGIN_COMPONENTS} ${PLUGIN_COMPONENT})
    string(TOUPPER ${PLUGIN_COMPONENT} PLUGIN_COMPONENT_UPPER)
    set(CPACK_COMPONENT_${PLUGIN_COMPONENT_UPPER}_DESCRIPTION ${CPACK_COMPONENT_${PLUGIN_COMPONENT_UPPER}_DESCRIPTION} PARENT_SCOPE)
    #set(CPACK_COMPONENT_${PLUGIN_COMPONENT_UPPER}_DEPENDS ${CPACK_COMPONENT_${PLUGIN_COMPONENT_UPPER}_DEPENDS} PARENT_SCOPE)
    set(CPACK_COMPONENT_${PLUGIN_COMPONENT_UPPER}_GROUP "Plugins" PARENT_SCOPE)
  endif()
endforeach()

#set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}PLUGINS-ALL_DEPENDS ${PLUGIN_COMPONENTS} PARENT_SCOPE)
set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}PLUGINS-ALL_DESCRIPTION "All OpenRAVE ${OPENRAVE_VERSION} plugins" PARENT_SCOPE)

set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} ${PLUGIN_COMPONENTS} ${COMPONENT_PREFIX}plugins-all PARENT_SCOPE)
